syntax = "proto3";
import "tcp.proto";
package pb;

message DeliverMessageReq {
  int64 device_id = 1;
  Message message = 2;
}

message DeliverMessageResp {
}

service ConnInit{
  rpc DeliverMessage(DeliverMessageReq) returns (DeliverMessageResp);
}